--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </div>
 
   <div class="buttons">
-    <a href="login">Login</a>
+    <a href="login">Login.html</a>
     <a href="signup.html">Signup</a>
   </div>
 
