--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
   </div>
 
   <div class="buttons">
-    <a href="login">Login.html</a>
+    <a href="login.html">Login</a>
     <a href="signup.html">Signup</a>
   </div>
 
 </body>
-  </html>
+</html>
